2008-12-19 [paul]	2.0.3

	2.0.3 released

2008-12-19 [paul]	2.0.2cvs7

	* configure.ac
	* po/cs.po
		added by David Vachulka

2008-12-12 [paul]	2.0.2cvs6

	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcalendar.c
		win32: fix unlinking
		Patch by Colin

2008-12-07 [colin]	2.0.2cvs5

	* src/month-view.c
	* src/vcal_meeting_gtk.c
		Fix warnings

2008-12-07 [paul]	2.0.2cvs4

	* configure.ac
		check for compiler before setting CFLAGS
		clean up check for curl

2008-11-28 [colin]	2.0.2cvs3

	* po/fr.po
		Update

2008-11-27 [colin]	2.0.2cvs2

	* src/claws.def
	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcalendar.c
		Don't use prefs_common struct directly
		(will avoid crashes on Windows)

2008-11-14 [colin]	2.0.2cvs1

	* src/plugin.c
	* src/vcalendar.c
		Sync with core

2008-10-10 [paul]	2.0.2

	2.0.2 released

2008-10-06 [colin]	2.0.1cvs4

	* libical/libical/icaltime.c
		Add missing tzset call when getting UTC times
		Fixes wrong dates on WIN32

2008-10-05 [colin]	2.0.1cvs3

	* src/vcal_folder.c
		Fix double free

2008-10-04 [colin]	2.0.1cvs2

	* src/claws.def
		Fix symbols

2008-10-04 [colin]	2.0.1cvs1

	* src/plugin.c
		Win32: set translation dir

2008-10-03 [paul]	2.0.1

	2.0.1 released

2008-10-03 [paul]	2.0.0cvs23

	* po/ca.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/zh_CN.po
		updated by Miquel Oliete, Flammie Pirinen,
		Colin Leroy, Pader Rezo, Ralph Young

2008-10-02 [colin]	2.0.0cvs22

	* src/vcalendar.c
		Remove more double-refreshes

2008-10-02 [colin]	2.0.0cvs21

	* src/vcal_meeting_gtk.c
		Fix double updating of the view after 
		meeting creation or update

2008-10-01 [colin]	2.0.0cvs20

	* src/day-view.c
		Fix infinite loop when trying to add a
		meeting at the start of a month in
		week view

2008-09-30 [colin]	2.0.0cvs19

	* src/day-view.c
	* src/icaltime_as_local.c
	* src/month-view.c
	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
		Win32: fix time usage; use g_stat

2008-09-29 [colin]	2.0.0cvs18

	* src/vcal_folder.c