@@ -213,3 +213,4 @@
 ( cvs diff -u -r 1.1.2.20 -r 1.1.2.21 src/month-view.c;  cvs diff -u -r 1.1.2.84 -r 1.1.2.85 src/vcal_meeting_gtk.c;  ) > 2.0.2cvs5.patchset
 ( cvs diff -u -r 1.2.2.106 -r 1.2.2.107 src/vcal_folder.c;  cvs diff -u -r 1.1.2.78 -r 1.1.2.79 src/vcal_manager.c;  cvs diff -u -r 1.2.2.85 -r 1.2.2.86 src/vcalendar.c;  ) > 2.0.2cvs6.patchset
 ( cvs diff -u -r 1.2.2.316 -r 1.2.2.317 configure.ac;  diff -u /dev/null po/cs.po;  ) > 2.0.2cvs7.patchset
+( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 libical/libical/icalerror.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libical/libical/icalmime.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libical/libical/sspm.c;  ) > 2.0.3cvs1.patchset
