@@ -1,3 +1,10 @@
+2009-01-06 [colin]	2.0.3cvs1
+
+	* libical/libical/icalerror.c
+	* libical/libical/icalmime.c
+	* libical/libical/sspm.c
+		Fix uninitialized warnings
+
 2008-12-19 [paul]	2.0.3
 
 	2.0.3 released
